html: added blog structure example

--- a/html_template/cours_1_ancre/accueil.html
+++ b/html_template/cours_1_ancre/accueil.html
@@ -17,7 +17,7 @@
         <a href="contact/contact.html">Contact</a>
     </li>
     <li>
-        <a href="http://google.com">Aller sur google</a>
+        <a href="https://google.com">Aller sur google</a>
     </li>
 </ul>
 </body>
